--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
   
   <p>To try out the demo, 
     <a href="http://www.longtailvideo.com/players/jw-flv-player/">download the newest version of JW FLV Player</a> 
-    (currently 4.3) and extract it to the <code>jwplayer</code> directory, under the same directory as
+    (currently 4.3) and extract it to a directory called <code>jwplayer</code>, under the same directory as
     this file.
   </p>
   
